--- a/404.html
+++ b/404.html
@@ -1,4 +1,5 @@
-<script>
+<!-- <script>
 // window.location.hostname = 'ghostapp.pw';
-  window.location = "https://ghostapp.pw/" + "new?continue=" + window.location.pathname;
+//  window.location = "https://ghostapp.pw/" + "new?continue=" + window.location.pathname;
 </script>
+ -->
